apps/base/ledgerly/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ledgerly
spec:
  ingressClassName: traefik
  rules:
    - host: ledgerly.colddev.net
      http:
        paths:
          - backend:
              service:
                name: ledgerly
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ledgerly.colddev.net
      secretName: ledgerly-tls-secret
